Minor Sonar Issue fixed